[package]
name = "robotcar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

cortex-m-rtic = "1.1"

stm32f4xx-hal = { version = "0.14", features = ["stm32f401", "rtic", "rtic-monotonic", "defmt"] }

panic-probe = { version = "0.3", features = ["print-defmt"] } # Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives

defmt = "0.3"
defmt-rtt = "0.4"

fugit = { version = "0.3", features = ["defmt"] }

adafruit-bluefruit-protocol = { git = "https://github.com/rursprung/adafruit-bluefruit-protocol-rs.git", default-features = false, features = ["button_event", "defmt"] }
tb6612fng = { git = "https://github.com/rursprung/tb6612fng-rs.git", features = ["defmt"] }
vl53l1x-uld = "2.0.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
