[package]
name = "robotcar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

cortex-m-rtic = "1.1"

stm32f4xx-hal = { version = "0.14", features = ["stm32f401", "rtic", "rtic-monotonic", "defmt"] }

panic-probe = { version = "0.3", features = ["print-defmt"] } # Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives

defmt = "0.3"
defmt-rtt = "0.4"

fugit = { version = "0.3", features = ["defmt"] }

shared-bus = { version = "0.2", features = ["cortex-m"] }

adafruit-bluefruit-protocol = { version = "0.1", default-features = false, features = ["button_event", "defmt"] }
tb6612fng = { version = "0.1.0", features = ["defmt"] }
vl53l1x-uld = "2.0.0"

embedded-graphics = "0.7"
display-interface = "0.4"
ssd1306 = "0.7"

itoa = "1.0"

[features]
default = [ "use-display", "use-tof" ]

use-display = [ "has-i2c-device" ]
use-tof = [ "has-i2c-device" ]

# don't set this one directly!
has-i2c-device = []

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
