[package]
name = "robotcar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

stm32f4xx-hal = { version = "0.13.2", features = ["stm32f401"] }

panic-halt = "0.2" # Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives

defmt = "0.3"
defmt-rtt = "0.4"
